--- a/src/app/form-dashboard/form-dashboard.component.html
+++ b/src/app/form-dashboard/form-dashboard.component.html
@@ -4,9 +4,6 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col">
-                <div id="creator">
-                    <p>Amen<br>Dahabre</p>
-                </div>
                 <div dir="rtl" class="card w-85-p">
                     <div dir="rtl" class="card-body">
                         <form class="form" [formGroup]="formSearch">
@@ -29,12 +26,15 @@
                         </form>
                     </div>
                 </div>
+                <div id="creator">
+                    <p>Amen<br>Dahabre</p>
+                </div>
             </div>
         </div>
         <div class="row mt-3 mb-2">
             <form class="form" style="text-align: right;" [formGroup]="chooseForm">
                 <mat-radio-group aria-label="Select an option" formControlName="SwitchForms">
-                    <mat-radio-button value="0">טפסים כלליים</mat-radio-button>
+                    <mat-radio-button value="0">טפסים ארגוניים</mat-radio-button>
                     <mat-radio-button value="1">טפסים מחלקתיים</mat-radio-button>
                     <mat-radio-button value="2">הכל</mat-radio-button>
                 </mat-radio-group>
@@ -83,11 +83,11 @@
         *ngIf="chooseForm.controls['SwitchForms'].value == '0' || chooseForm.controls['SwitchForms'].value == '2'">
         <div class="poll-options">
             <div style="font-size: 20px; background-color: rgb(235, 231, 231);padding-right: 3px;text-align: right;">
-                <div>טפסים כלליים</div>
+                <div>טפסים ארגוניים</div>
             </div>
             <div class="row" style="margin-bottom: 20px;">
-                <div class="col-3" *ngFor="let item of all_forms_filter_general" (click)="openDialogToFill(item.FormID,0,item.Row_ID)"
-                    style="margin-bottom: 10px;">
+                <div class="col-3" *ngFor="let item of all_forms_filter_general"
+                    (click)="openDialogToFill(item.FormID,0,item.Row_ID)" style="margin-bottom: 10px;">
                     <mat-card style="height: 100%;" class="card m-2 p-2 text-center">
                         <div class="list-style text-center" style="font-size: 15px;">{{item.FormName}}</div>
                         <img src="assets/images/mersham-logo.png">
