--- a/src/app/emailsdashboard/emailsdashboard.component.html
+++ b/src/app/emailsdashboard/emailsdashboard.component.html
@@ -70,7 +70,7 @@
 </div><br><br>
 
 <div dir="rtl">
-    <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <mat-table [dataSource]="dataSource" class="mat-elevation-z8" [formGroup]="tableEmails">
         <!-- Position Column -->
         <ng-container matColumnDef="FormID">
             <mat-header-cell *matHeaderCellDef
@@ -99,8 +99,7 @@
             <mat-header-cell *matHeaderCellDef
                 style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> תאריך קבלת
                 פניה </mat-header-cell>
-            <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.EmailDateTime | date:
-                "yyyy/dd/MM"}} </mat-cell>
+            <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.EmailDateTime}} </mat-cell>
         </ng-container>
 
         <!-- Update Column -->
@@ -109,7 +108,7 @@
                 style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> ניהול פניה
             </mat-header-cell>
             <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
-                    color="accent" (click)="openDialogToManageEmail(element.EmailID,1)"><span class="material-icons">
+                    color="accent" (click)="openDialogToManageEmail(element.EmailID,1)" *ngIf="UserName == 'matias'"><span class="material-icons">
                         event_note
                     </span></button> </mat-cell>
         </ng-container>
@@ -119,7 +118,7 @@
                 style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> פיצול פניה
             </mat-header-cell>
             <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
-                    color="accent" (click)="openDialogToManageEmail(element.EmailID,0)"><span class="material-icons">
+                    color="accent" (click)="openDialogToManageEmail(element.EmailID,0)" *ngIf="UserName == 'matias'"><span class="material-icons">
                         add
                     </span></button> </mat-cell>
         </ng-container>
@@ -127,12 +126,19 @@
         <!-- Update Column -->
         <ng-container matColumnDef="showAll">
             <mat-header-cell *matHeaderCellDef
-                style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> סטטוס פניה
+                style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> התכתבות עם מנהל
             </mat-header-cell>
             <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
                     color="primary" (click)="openDialogToStatusComplaint(element.EmailID)"><span class="material-icons">
                         question_answer
                     </span></button> </mat-cell>
+        </ng-container>
+        
+        <ng-container matColumnDef="status">
+            <mat-header-cell *matHeaderCellDef
+                style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> סטטוס פניה
+            </mat-header-cell>
+            <mat-cell *matCellDef="let element" style="justify-content: center;"><mat-slide-toggle formControlName="slideT" (change)="changeStatus($event,element.EmailID)" *ngIf="UserName == 'matias'"></mat-slide-toggle></mat-cell>
         </ng-container>
 
 
