--- a/src/app/fill-survey/fill-survey.component.html
+++ b/src/app/fill-survey/fill-survey.component.html
@@ -20,6 +20,14 @@
     </mat-card>
     <div class="survey-options w-100100 float-right">
       <div class="poll-options">
+        <div class="row mt-3">
+          <div class="col-6 text-center">
+            תאריך : {{date}}
+          </div>
+          <div class="col-4 text-center">
+            שעה : {{time}}
+          </div>
+        </div>
         <div class="row">
           <div class="d-block">
             <div class="full-width mt-3 mb-3" style="white-space: pre-wrap;text-align-last: right;text-align: right;">
@@ -48,22 +56,24 @@
                   <div class="col-12 text-right">
                     <div class="d-block" *ngIf="questionCtrl.QuestionType == 'RadioButton'">
                       <mat-radio-group class="example-radio-group" formControlName="answerContent">
-                        <div class="d-block" *ngFor="let optionCtrl of _optionArr let j = index">
-                          <div class="d-block" *ngIf="optionCtrl.QuestionIDFK == questionCtrl.QuestionID">
+                        <div class="d-block" *ngFor="let optionCtrl of questionCtrl.Options; let j = index">
+                          <!-- <div class="d-block" *ngIf="optionCtrl.QuestionIDFK == questionCtrl.QuestionID"> -->
                             <mat-radio-button style="float: right;" value="{{optionCtrl.OptionValue}}">
                               {{optionCtrl.OptionValue}}</mat-radio-button>
-                          </div>
+                          <!-- </div> -->
                         </div>
                       </mat-radio-group>
                     </div>
                     <div class="d-block" *ngIf="questionCtrl.QuestionType == 'CheckBox'">
                       <mat-radio-group>
-                        <div class="d-block" *ngFor="let optionCtrl of _optionArr let k = index">
-                          <div class="d-block" *ngIf="optionCtrl.QuestionIDFK == questionCtrl.QuestionID">
-                            <mat-checkbox class="example-margin" style="float: right;" formControlName="answerContent"
-                              (change)="myModel($event,optionCtrl.OptionValue,questionCtrl.QuestionID)">
-                              {{optionCtrl.OptionValue}}</mat-checkbox>
-                          </div>
+                        <div class="d-block" *ngFor="let optionCtrl of questionCtrl.Options; let k = index"
+                          [formGroupName]="k">
+                          <!-- <div class="d-block" *ngIf="optionCtrl.QuestionIDFK == questionCtrl.QuestionID"> -->
+                          <mat-checkbox class="example-margin" formControlName="answerContent" style="float: right;"
+                            value="{{optionCtrl.OptionValue}}"
+                            (change)="myModel($event,optionCtrl.OptionValue,questionCtrl.QuestionID)">
+                            {{optionCtrl.OptionValue}}</mat-checkbox>
+                          <!-- </div> -->
                         </div>
                       </mat-radio-group>
                     </div>
@@ -77,7 +87,6 @@
                       <mat-form-field appearance="fill">
                         <mat-label>אפשרות תאריך</mat-label>
                         <input matInput formControlName="answerContent" [matDatepicker]="picker">
-
                       </mat-form-field>
                       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                       <mat-datepicker #picker></mat-datepicker>
@@ -109,7 +118,8 @@
                       </mat-form-field> -->
                       <img width="215" height="120" [src]="sign">
                       <button class="full-width mb-5" style="font-weight: bold;font-size: 20px;color: white;"
-                        color="warn" (click)="openSignatureDialog(questionCtrl.QuestionID)" type="submit" mat-raised-button>
+                        color="warn" (click)="openSignatureDialog(questionCtrl.QuestionID)" type="submit"
+                        mat-raised-button>
                         <span>לחתום</span>
                       </button>
                     </div>
@@ -128,7 +138,11 @@
             style="margin-top: 20px;">
             <mat-divider></mat-divider>
             <div class="row" style="display: block;">
-              <h4 style="text-align: center;">{{table.TableText}}</h4>
+              <h4 style="text-align: center;font-size: xx-large;font-weight: bold;">{{table.TableText}}</h4>
+            </div>
+            <mat-divider></mat-divider>
+            <div class="row" style="display: block;">
+              <h4 style="text-align: center;font-size: 22px;">{{table.SubTitle}}</h4>
             </div>
             <div formArrayName="ColumnRows" class="row" id="table-overflow">
               <div class="col">
@@ -143,6 +157,18 @@
                       <span *ngIf="row.rowsText != '' && output2 == 0;else input_other"
                         style="text-align: right;float: right;">{{row.rowsText}}</span>
                       <ng-template #input_other>
+                        <mat-form-field [formGroupName]="output2" *ngIf="column.ColType == 'Time'">
+                          <input matInput [ngxTimepicker]="endTime" [format]="24"
+                            formControlName="tableAnswerContent" />
+                          <ngx-material-timepicker #endTime></ngx-material-timepicker>
+                        </mat-form-field>
+
+                        <mat-form-field appearance="fill" [formGroupName]="output2" *ngIf="column.ColType == 'Date'">
+                          <mat-label>תאריך</mat-label>
+                          <input matInput formControlName="tableAnswerContent" [matDatepicker]="picker">
+                          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                          <mat-datepicker #picker></mat-datepicker>
+                        </mat-form-field>
                         <mat-form-field class="fix-my-width" [formGroupName]="output2" *ngIf="column.ColType == 'Text'">
                           <input matInput formControlName="tableAnswerContent" class="table-form-input">
                         </mat-form-field>
@@ -152,6 +178,14 @@
                             </mat-checkbox>
                           </mat-radio-group>
                         </section>
+                        <div class="d-block" *ngIf="column.ColType == 'Signature'">
+                          <img [src]="sign" style="width: 100px;height: 60px;float: right;">
+                          <button class="full-width mb-5"
+                            style="font-weight: bold;font-size: 20px;color: white;width: 60%;" color="warn"
+                            (click)="openSignatureDialog(column.Row_ID)" type="submit" mat-raised-button>
+                            <span>לחתום</span>
+                          </button>
+                        </div>
                       </ng-template>
                     </td>
                   </tr>
@@ -164,12 +198,12 @@
     </div>
 
 
-    <div class="full-width mb-2">
+    <!-- <div class="full-width mb-2">
       <div class="row" style="text-align: right;">חתימה</div>
       <canvas class="row" #canvas id="canvas"></canvas>
       <button mat-raised-button color="secondary" style="float: right;" type="button" (click)="resetSign()"><span>תיקון
           חתימה</span></button>
-    </div>
+    </div> -->
     <div class="button-row" *ngIf="isCaseNumber == '0'">
       <button class="full-width mb-5" style="font-weight: bold;font-size: 20px;color: black;" color="primary"
         (click)="fillForm(1)" type="submit" mat-raised-button>
