--- a/src/app/updatesingleform/updatesingleform.component.html
+++ b/src/app/updatesingleform/updatesingleform.component.html
@@ -148,7 +148,7 @@
                     <div *ngIf="questionCtrl.controls['questionType'].value == 'TextArea'">
                       <mat-form-field class="full-width">
                         <textarea style="resize: none;" cols="3" rows="2" matInput
-                          placeholder="טקסט חופשי קבוע"></textarea>
+                          placeholder="פסקה בקבועה"></textarea>
                       </mat-form-field>
                     </div>
                     <div *ngIf="questionCtrl.controls['questionType'].value == 'Date'">
